# ecu-ai-testops

./: README.md  docker-compose.yml  pyproject.toml
.agents/rules/: guidelines.md
.agents/workflows/: workflows.md
.github/workflows/: ci.yml  pr-check.yml
anomaly_detector/: __main__.py  detector.py  evaluator.py  feature_extractor.py  requirements.txt  storage_client.py  trainer.py
data/: demo_signal_log.parquet  signal_log.parquet  test_results.json
docs/: DEVELOPER_GUIDE.md  ecu_test_intelligence_platform_design.docx  ecu_test_intelligence_platform_design.md  phase-1-signal-simulator.md  phase-2-test-runner.md  phase-3-anomaly-detector.md  phase1_walkthrough.md
simulator/: Dockerfile  __init__.py  __main__.py  dataset_writer.py  fault_injector.py  obd_simulator.py  requirements.txt  uds_simulator.py
test_cases/: obd_tests.yaml  uds_tests.yaml
test_runner/: __init__.py  __main__.py  requirements.txt  result_writer.py  signal_matcher.py  test_loader.py
tests/: conftest.py  test_anomaly_detector_detector.py  test_anomaly_detector_evaluator.py  test_anomaly_detector_features.py  test_anomaly_detector_storage.py  test_anomaly_detector_trainer.py
tests/simulator/: test_dataset_writer.py  test_fault_injector.py  test_obd_simulator.py  test_uds_simulator.py
tests/test_runner/: conftest.py  test_loader.py  test_result_writer.py  test_signal_matcher.py
